# compass

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  create_db.sql  default.nix  deploy  flake.nix  pyproject.toml  shell.nix
data/: settings.json
dev/: start_container.bash  stop_container.bash
experiments/: calendarweek.py
src/: auth.py  compass_app.py  database.py  discord_bot.py  webserver.py
src/compass_app/: auth.py  cli.py  config.py  database.py  dcbot.py  errors.py  habitica.py  main.py  settings.py  sleep_tracking.py  webserver.py
src/compass_app/accountability/: cog.py  manager.py  tables.py
src/compass_app/dcbot/: bot.py
src/parts/: habitica.py  sleep_tracker.py
