[project]
name = "compass-app"
version = "0.1.0"
description = "Discord bot + web app for https://thecompass.diy"
authors = [
    {name = "Sebastian Moser",email = "sebastian@c2vi.dev"},
    {name = "melektron",email = "matteo@elektron.work"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
# this is done by default.nix:
#dependencies = [
#]

[project.scripts]
compass_app = "compass_app.main:entry"

[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"